# Retro-game-Sound-Mixer

./: CMakeLists.txt  README.md
Demo Midis/Originals/: SongInfo.txt
Demo Midis/Video Game/: F-Zero_MV_-_Tenth_Zone_East (1).mid  Megaman_X2_-_Intro.mid  SongInfo.txt
Saved songs/: X4-v-X1.midi  X5.midi  X5SNES.midi  X6.midi  g.midi  n.midi  new-game.midi  new-song.midi  newer_song.midi
sound_fonts/PS1/: Mega_Man_X.sf2
sound_fonts/SNES/: Fixed Mega Man X3 Soundfont.sf2  HD_Earthbound_Guitar.sf2  Mega Man X Soundfont.sf2  MegaManX-SF-3.0.sf2  Mega_Man_X2_Soundfont.sf2  Mega_Man_X3_Soundfont.sf2  Rockman X1+X2 Soundfont (A Lil Sumn Sumn 2022 Edition).sf2  Rockman X1+X2 Soundfont (A Lotta Sumn Sumn 2022 Edition).sf2  SMW_SF2_2025_v1.3.sf2
src/: main.cpp
